<resources>
    <string name="app_name">Collection</string>

    <string name="menu_collect_main">Main Menu</string>
    <string name="action_settings">Settings</string>
    <string name="enterCollection">Enter Collection</string>
    <string name="navigate">Navigate</string>
    <string name="route">Route Data</string>
    <string name="nav">Navigate</string>
    <string name="file">Update Data File</string>

    <string name="lblSiteID">Site ID #</string>
    <string name="lbllbscollected">Pounds Collected</string>
    <string name="lblLookup">Lookup ID</string>
    <string name="post">Post Collection to System</string>
    <string name="driverID">Driver ID</string>
    <string name="setdriverID">Set Driver ID</string>
    <string name="setDate">Set Date</string>
    <string name="installMainDB">Install/Update Database</string>
    <string name="lbldriverID">Driver ID     </string>
    <string name="lblpounds">Pounds Collected  </string>
    <string name="lbldate">Date Collected</string>
</resources>
