<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#814b4b">


    <EditText
        android:id="@+id/sitelookupID"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:hint="Name of Site"
        android:inputType="textPersonName" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/driverID"
        android:layout_weight="0.17" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="58dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/driverID"
            android:id="@+id/textView"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lbllbscollected"
            android:id="@+id/lblbsCollected"
            android:layout_weight="0.03"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingTop="10px" />

        <EditText
            android:id="@+id/galsCollected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Total lbs Collected"
            android:inputType="number"
            android:padding="5dp"
            android:layout_weight="0.00"
            android:paddingTop="10px" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setDate"
            android:id="@+id/btnChangeDate"
            android:layout_weight="0.08" />

        <EditText
            android:id="@+id/dateCollected"
            android:layout_width="196dp"
            android:layout_height="61dp"
            android:hint="Date"
            android:inputType="datetime"
            android:padding="5dp" />

        <Button
            android:id="@+id/postcollection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:layout_weight="0.24" />

    </LinearLayout>

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/lblLookup"
        android:id="@+id/btnLookup"
        android:layout_weight="0.19"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Enter Site ID #"
            android:id="@+id/lblSiteID"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:singleLine="true"
            android:layout_marginRight="10dp" />

        <EditText
            android:id="@+id/siteID"
            android:layout_width="173dp"
            android:layout_height="66dp"
            android:hint="####"
            android:inputType="number"
            android:padding="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:enabled="true"
            android:paddingLeft="10dp" />

    </LinearLayout>

</LinearLayout>